update version to 221.5591.52 and fix security issue